// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations login with correct password 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "login": {
          "email": "member@member.com",
          "firstName": "User",
          "id": "1",
          "lastName": "Test",
          "token": "token",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`mutations login with incorrect password 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 5,
              "line": 3,
            },
          ],
          "message": "email or password is incorrect",
          "path": [
            "login",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`mutations login with invalid email 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 5,
              "line": 3,
            },
          ],
          "message": "email or password is incorrect",
          "path": [
            "login",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`mutations signUp 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "signUp": {
          "email": "test@test.com",
          "firstName": "User",
          "id": "2",
          "lastName": "Test",
          "token": "token",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
